Bug 508980 - Introducing multiple scheduled items moves the cursor to the top of the ledger
Summary: Introducing multiple scheduled items moves the cursor to the top of the ledger
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-31 17:07 UTC by ccamara
Modified: 2025-09-13 10:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ccamara 2025-08-31 17:07:33 UTC
SUMMARY

After upgrading to v 5.2. Whenever I introduce a scheduled payment, the selection moves to the first element of the ledger, while previously, it stayed where it was (most current date). This new behaviour is annoying if we are introducing multiple scheduled payments and specially, if the ledger is long, as introduces many extra clicks as compared to the previous one.

STEPS TO REPRODUCE
1. Schedule a payment for a given date
2. (After the date has passed), On the ledger view, right click on the scheduled payment to introduce their values
3. Edit/Accept the values from the detailed view.


OBSERVED RESULT

1. The pointer moves to the first item of the ledger

EXPECTED RESULT

1. The pinter should be staying where it was when introducing the scheduled payment

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon
KDE Plasma Version: 6.4.4
KDE Frameworks Version: 6.17.0
Qt Version: 6.9.1


ADDITIONAL INFORMATION
Comment 1 Jack 2025-08-31 17:31:08 UTC
It seems there are multiple cases where the focus in the ledger is not as expected, and often to the first or last item.  At some point, we'll probably find one bug to use to track this (unless it turns out to actually be more than one underlying issue) and close the others as duplicates.
Comment 2 Ingo Klöcker 2025-08-31 19:59:24 UTC
I'm not seeing this with 5.2.1 (and I cannot remember seeing it with 5.2.0 either). And I'm using lots of scheduled transaction. Hmm, maybe it only happens if one uses the mouse. I'm doing almost everything with the keyboard only.
Comment 3 Jack 2025-08-31 22:22:14 UTC
 I can replicate using the mouse.  Oddly, I can't figure out how to enter the next scheduled transaction using only the keyboard.
Comment 4 Jack 2025-08-31 22:43:55 UTC
I just assigned a keyboard shortcut to Enter next transaction, and invoking that shortcut also scrolled to the top of the ledger after the transaction was entered.
Comment 5 Thomas Baumgart 2025-09-13 09:11:57 UTC
Git commit df03a905fe73656fbd49eaff646a44106806af28 by Thomas Baumgart.
Committed on 13/09/2025 at 09:07.
Pushed by tbaumgart into branch 'master'.

Keep selected ledger items only upon first call
FIXED-IN: 5.2.2

M  +7    -4    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/df03a905fe73656fbd49eaff646a44106806af28
Comment 6 Thomas Baumgart 2025-09-13 10:24:08 UTC
Git commit ea290d726beae51330ce1ed008d4d6656c748e7d by Thomas Baumgart.
Committed on 13/09/2025 at 09:12.
Pushed by tbaumgart into branch '5.2'.

Keep selected ledger items only upon first call
FIXED-IN: 5.2.2
(cherry picked from commit df03a905fe73656fbd49eaff646a44106806af28)

M  +7    -4    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/ea290d726beae51330ce1ed008d4d6656c748e7d