Keep selected ledger items only upon first call

BUG: 508980
FIXED-IN: 5.2.2
(cherry picked from commit df03a905fe73656fbd49eaff646a44106806af28)