kmymoney/views/ledgerview.cpp
@@ -662,11 +662,14 @@ void LedgerView::setModel(QAbstractItemModel* model)
 
     connect(model, &QAbstractItemModel::modelAboutToBeReset, this, [&]() {
         // keep the current selected ids as the indeces might change
-        d->selectionBeforeReset = selectedJournalEntryIds();
-        d->currentBeforeReset = currentIndex().data(eMyMoney::Model::IdRole).toString();
+        // but only the first time we come around here
+        if (!d->reselectAfterResetPending) {
+            d->selectionBeforeReset = selectedJournalEntryIds();
+            d->currentBeforeReset = currentIndex().data(eMyMoney::Model::IdRole).toString();
 
-        // turn off updates of the view to reduce flicker
-        viewport()->setUpdatesEnabled(false);
+            // turn off updates of the view to reduce flicker
+            viewport()->setUpdatesEnabled(false);
+        }
     });
 
     connect(model, &QAbstractItemModel::modelReset, this, [&]() {
